# hex

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  LICENSE  README.md  TODO.txt  floskell.json  grammar.txt  hex-exe.prof  hex.cabal  hie.yaml  make_tests.sh  ormolu.yaml  package.yaml  parameters.txt  stack.yaml  test.tex
app/: App.hs  HeX.hs  Main.hs  MainDVI.hs  MainParse.hs  MainTFM.hs  What.hs
bench/: Bench.hs
example/: example.tex  get_a_font.sh  test.tex
examples/: example.tex  macro.tex  plain_min.tex  sample_plain.tex  simple.tex  test.tex
hex/: HeX.hs
hexc/: Hexc.hs
hexi/: Hexi.hs
repl/: Repl.hs
src/: Adjacent.hs  Arrange.hs  Box.hs  BoxDraw.hs  BreakList.hs  Build.hs  Cat.hs  Categorise.hs  Command.hs  Config.hs  Expand.hs  Harden.hs  HeXPrelude.hs  HeXlude.hs  Hexlude.hs  Lex.hs  Paragraph.hs  Parse.hs  Setting.hs  TFM.hs  Unit.hs
src/Box/: Draw.hs
src/BreakList/: Line.hs  Page.hs
src/DVI/: Document.hs  Encode.hs  Instruction.hs  Operation.hs  Unit.hs  Write.hs
src/Data/: Adjacent.hs  Ascii.hs  Byte.hs  Concept.hs  Path.hs  Variant.hs
src/Debug/: Describe.hs  Readable.hs
src/HeX/: App.hs  Box.hs  BreakList.hs  Build.hs  BuildHelp.hs  Categorise.hs  Command.hs  Concept.hs  Config.hs  Dimensioned.hs  Evaluate.hs  Expand.hs  Lex.hs  Orphans.hs  Parse.hs  Quantity.hs  Resolve.hs  Run.hs  Type.hs  Unit.hs  Variable.hs
src/HeX/Box/: Draw.hs  Elem.hs
src/HeX/BreakList/: BreakList.hs  Elem.hs  Glue.hs  Judge.hs  Line.hs  Page.hs  Set.hs
src/HeX/Command/: Build.hs  Commands.hs  Common.hs  ModeIndependent.hs  Run.hs
src/HeX/Config/: Codes.hs  Config.hs  Parameters.hs  Ref.hs
src/HeX/Parse/: AST.hs  Assignment.hs  Command.hs  Common.hs  Condition.hs  Expanded.hs  Glue.hs  Helpers.hs  Inhibited.hs  Length.hs  Lexed.hs  Number.hs  Parser.hs  Quantity.hs  Resolve.hs  Resolved.hs  Stream.hs  SyntaxCommand.hs  Token.hs  Util.hs  VarAssignment.hs
src/HeX/Parse/Expanded/: Assignment.hs  Command.hs  Common.hs  Glue.hs  Inhibited.hs  Length.hs  Number.hs  Parameter.hs  Stream.hs  VarAssignment.hs
src/HeX/Parse/Lexed/: Inhibited.hs  Stream.hs
src/HeX/Parse/Resolved/: Parameter.hs  Resolve.hs  Stream.hs  SyntaxCommand.hs  Token.hs
src/HeX/Parse/Stream/: Class.hs  Expanding.hs  Instance.hs  NonExpanding.hs  untitled
src/HeX/Parse/Token/: Parameter.hs  Token.hs
src/HeX/Resolve/: Map.hs  Resolve.hs  Token.hs
src/Hex/: App.hs  BreakList.hs  Categorise.hs  Config.hs  Evaluate.hs  Lex.hs  Parse.hs  Quantity.hs  Resolve.hs  Run.hs  Variable.hs
src/Hex/Box/: Draw.hs  Elem.hs
src/Hex/BreakList/: Line.hs  Page.hs  Set.hs
src/Hex/Config/: Codes.hs  Config.hs  Parameters.hs
src/Hex/Parse/: AST.hs  Assignment.hs  Inhibited.hs  Quantity.hs  SyntaxCommand.hs
src/Hex/Parse/CommandParser/: Assignment.hs  Command.hs  Condition.hs  Inhibited.hs  Quantity.hs  SyntaxCommand.hs
src/Hex/Parse/Parser/: Class.hs  Combinators.hs  ParseT.hs
src/Hex/Parse/Stream/: Class.hs  Expanding.hs  NonExpanding.hs  Parse.hs
src/Hex/Parse/Stream/Expanding/: Parse.hs
src/Hex/Parse/TokenParser/: Class.hs  Combinators.hs  ParseT.hs
src/Hex/Resolve/: Map.hs  Resolve.hs  Token.hs
src/Math/: Byte.hs
src/Parse/: AST.hs  Command.hs  Common.hs  Glue.hs  Helpers.hs  Inhibited.hs  Length.hs  Number.hs  Quantity.hs  Stream.hs  Util.hs
src/System/Log/: Slog.hs
src/TFM/: Character.hs  Common.hs  FontParams.hs  Header.hs  LigKern.hs  Main.hs  Parse.hs  Recipe.hs  Table.hs
support/: TODO.txt  clean_profile  conditions.txt  dvi_spec.md  grammar.txt  input.txt  parameters.txt  plain_min.tex  snippets.sh  style.md  tfm_spec.md
test/: Main.hs  Spec.hs
test/Hex/Test/: Categorise.hs  Lex.hs  Parse.hs
test/input/: base.tex  catcode.tex  condition.tex  hsize.tex  indent.tex  kern.tex  macro.tex  rule.tex  simple.tex
test/output/: base.dvi  catcode.dvi  condition.dvi  hsize.dvi  indent.dvi  kern.dvi  macro.dvi  rule.dvi  simple.dvi
