name:                hex
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/eddiejessup/hex#readme
license:             BSD3
license-file:        LICENSE
author:              Elliot Marsden
maintainer:          elliot.marsden@gmail.com
copyright:           Copyright (c) 2017 Elliot Marsden
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Categorise
                     , Build
                     , Unit
                     , Adjacent
                     , Lex
                     , Expand
                     , Config

                     , BreakList
                     , BreakList.Line
                     , BreakList.Page


                     , Box
                     , Box.Draw

                     , TFM
                     , TFM.Parse
                     , TFM.Character

                     , DVI.Encode

                     , Parse
                     , Parse.Util
                     , Parse.Common
                     , Parse.Number
                     , Parse.Length
                     , Parse.Glue
                     , Parse.Command
  build-depends:       base
                     , containers
                     , bytestring
                     , binary
                     , split
                     , filepath
                     , megaparsec
                     , MissingH
                     , directory
                     , path
                     , mtl
                     , unordered-containers
                     , hashable
                     , safe
                     , transformers
                     , extra
  default-language:    Haskell2010

executable hex
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded
  build-depends:       base
                     , hex
                     , bytestring
                     , transformers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eddiejessup/hex
