name:                hex
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/eddiejessup/hex#readme
license:             BSD3
license-file:        LICENSE
author:              Elliot Marsden
maintainer:          elliot.marsden@gmail.com
copyright:           Copyright (c) 2017 Elliot Marsden
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HeX.Categorise
                     , HeX.Build
                     , HeX.Unit
                     , HeX.Lex
                     , HeX.Expand
                     , HeX.Config

                     , HeX.Parse
                     , HeX.Parse.Util
                     , HeX.Parse.Common
                     , HeX.Parse.Number
                     , HeX.Parse.Length
                     , HeX.Parse.Glue
                     , HeX.Parse.Command

                     , HeX.BreakList
                     , HeX.BreakList.Line
                     , HeX.BreakList.Page


                     , HeX.Box
                     , HeX.Box.Draw

                     , Adjacent

                     , TFM
                     , TFM.Parse
                     , TFM.Character

                     , DVI.Encode
                     , DVI.Document

  build-depends:       base
                     , containers
                     , bytestring
                     , binary
                     , split
                     , filepath
                     , megaparsec
                     , MissingH
                     , directory
                     , path
                     , mtl
                     , unordered-containers
                     , hashable
                     , safe
                     , transformers
                     , extra
  default-language:    Haskell2010

executable hex
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded
  build-depends:       base
                     , hex
                     , bytestring
                     , transformers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eddiejessup/hex
