name:                hex
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/eddiejessup/hex#readme
license:             BSD3
license-file:        LICENSE
author:              Elliot Marsden
maintainer:          elliot.marsden@gmail.com
copyright:           Copyright (c) 2017 Elliot Marsden
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HeX.Run
                     , HeX.Categorise
                     , HeX.Build
                     , HeX.Unit
                     , HeX.Lex
                     , HeX.Config

                     , HeX.BreakList
                     , HeX.BreakList.Line
                     , HeX.BreakList.Page
                     , HeX.BreakList.Elem
                     , HeX.BreakList.Glue
                     , HeX.BreakList.Judge
                     , HeX.BreakList.Set

                     , HeX.Box
                     , HeX.Box.Draw

                     , HeX.Parse.Helpers

                     , HeX.Parse.Lexed
                     , HeX.Parse.Lexed.Inhibited
                     , HeX.Parse.Lexed.Stream

                     , HeX.Parse.Resolved
                     , HeX.Parse.Resolved.Stream
                     , HeX.Parse.Resolved.Token
                     , HeX.Parse.Resolved.Resolve

                     , HeX.Parse.Expanded
                     , HeX.Parse.Expanded.Stream
                     , HeX.Parse.Expanded.Common
                     , HeX.Parse.Expanded.Command
                     , HeX.Parse.Expanded.Number
                     , HeX.Parse.Expanded.Length
                     , HeX.Parse.Expanded.Glue

                     , Adjacent

                     , TFM
                     , TFM.Parse
                     , TFM.Common
                     , TFM.Table
                     , TFM.Header
                     , TFM.Character
                     , TFM.LigKern
                     , TFM.FontParams

                     , DVI.Encode
                     , DVI.Document
  build-depends:       base
                     , containers
                     , bytestring
                     , binary
                     , split
                     , filepath
                     , megaparsec
                     , MissingH
                     , directory
                     , path
                     , mtl
                     , unordered-containers
                     , hashable
                     , safe
                     , transformers
                     , extra
  default-language:    Haskell2010

executable hex
  hs-source-dirs:      app
  main-is:             HeX.hs
  ghc-options:         -threaded
  build-depends:       base
                     , hex
                     , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eddiejessup/hex
